--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/* <!DOCTYPE html>
 <html lang="uz">
 <head>
   <meta charset="UTF-8" />
@@ -63,3 +63,302 @@
   <p>Iltimos, keyinroq qayta urinib ko‘ring.</p>
 </body>
 </html>
+*/
+
+
+
+
+<!DOCTYPE html>
+<html lang="uz">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profil, Psixologik Test va O'yin</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f0f0;
+    }
+    .container {
+      padding: 20px;
+    }
+    .profile-button {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      cursor: pointer;
+    }
+    .profile-image-small {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 10px;
+    }
+    .profile-section {
+      display: none;
+      flex-direction: column;
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      animation: fadeIn 0.5s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    .profile-section input,
+    .profile-section select {
+      margin-bottom: 10px;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      width: 100%;
+    }
+    .profile-section button {
+      padding: 10px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .profile-image-preview {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+
+    /* Psixologik test bo'limi */
+    .question-section {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .question {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+    .answers {
+      margin-bottom: 20px;
+    }
+    .answers input {
+      margin-right: 10px;
+    }
+    .btn {
+      padding: 10px 20px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .result {
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #4caf50;
+    }
+
+    /* Yangiliklar bo'limi */
+    .news-section {
+      background-color: #fff;
+      padding: 20px;
+      margin-top: 30px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .news-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    /* O'yin bo'limi */
+    .game-section {
+      background-color: #fff;
+      padding: 20px;
+      margin-top: 30px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .game-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    .heart {
+      font-size: 50px;
+      color: red;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <!-- Profil bo'limi -->
+    <div class="profile-button" onclick="toggleProfile()">
+      <img id="profileImageSmall" src="" class="profile-image-small" alt="👤">
+      <span>👤 Profil</span>
+    </div>
+
+    <div class="profile-section" id="profileSection">
+      <img id="profileImagePreview" class="profile-image-preview" src="" alt="Profil rasmi">
+      <input type="file" accept="image/*" onchange="loadImage(event)" />
+      <input type="text" placeholder="Ismingiz" id="nameInput" />
+      <input type="text" placeholder="Familiyangiz" id="surnameInput" />
+      <input type="date" id="birthInput" />
+      <select id="genderSelect">
+        <option value="">Jins</option>
+        <option value="male">Erkak</option>
+        <option value="female">Ayol</option>
+      </select>
+      <select id="langSelect">
+        <option value="uz">🇺🇿 O'zbek</option>
+        <option value="ru">🇷🇺 Rus</option>
+        <option value="en">🇬🇧 English</option>
+        <option value="ar">🇸🇦 Arabic</option>
+      </select>
+      <select id="modeSelect">
+        <option value="light">🌞 Kunduzgi rejim</option>
+        <option value="dark">🌙 Tungi rejim</option>
+      </select>
+      <button onclick="saveProfile()">💾 Saqlash</button>
+      <button onclick="editProfile()">✏️ O'zgartirish</button>
+    </div>
+
+    <!-- Psixologik Test -->
+    <div class="question-section" id="questionSection">
+      <div class="question">Sizning ruhiy holatingiz qanday?</div>
+      <div class="answers">
+        <input type="radio" id="answer1" name="question1" value="yes"> Yaxshi
+        <input type="radio" id="answer2" name="question1" value="no"> Yomon
+      </div>
+      <button class="btn" onclick="nextQuestion()">Keyingi savol</button>
+    </div>
+
+    <div class="question-section" id="questionSection2" style="display: none;">
+      <div class="question">Tug'ilgan kuningizni yaxshi o'tkazdingizmi?</div>
+      <div class="answers">
+        <input type="radio" id="answer3" name="question2" value="yes"> Ha
+        <input type="radio" id="answer4" name="question2" value="no"> Yo'q
+      </div>
+      <button class="btn" onclick="nextQuestion()">Keyingi savol</button>
+    </div>
+
+    <div class="question-section" id="questionSection3" style="display: none;">
+      <div class="question">Hozirgi holatingizni qanday baholaysiz?</div>
+      <div class="answers">
+        <input type="radio" id="answer5" name="question3" value="yes"> O'zimni baxtli his qilyapman
+        <input type="radio" id="answer6" name="question3" value="no"> Biroz tushkunman
+      </div>
+      <button class="btn" onclick="showResult()">Tayyor</button>
+    </div>
+
+    <div class="result" id="result" style="display: none;"></div>
+
+    <!-- Yangiliklar bo'limi -->
+    <div class="news-section">
+      <div class="news-title">Yangiliklar</div>
+      <div id="newsContent">Bu yerda yangiliklarni yozib borasiz...</div>
+    </div>
+
+    <!-- O'yin bo'limi -->
+    <div class="game-section">
+      <div class="game-title">Sevgi O'yini</div>
+      <div id="gameInstructions">Sevgi Heart belgisini bosing!</div>
+      <span class="heart" onclick="heartClick()">❤️</span>
+      <div id="gameResult"></div>
+    </div>
+  </div>
+
+  <script>
+    // Profilni ko'rsatish va tahrirlash
+    function toggleProfile() {
+      const section = document.getElementById("profileSection");
+      section.style.display = section.style.display === "flex" ? "none" : "flex";
+    }
+
+    function loadImage(event) {
+      const image = URL.createObjectURL(event.target.files[0]);
+      document.getElementById("profileImagePreview").src = image;
+      document.getElementById("profileImageSmall").src = image;
+      localStorage.setItem("profileImage", image);
+    }
+
+    function saveProfile() {
+      const name = document.getElementById("nameInput").value;
+      const surname = document.getElementById("surnameInput").value;
+      const birth = document.getElementById("birthInput").value;
+      const gender = document.getElementById("genderSelect").value;
+      const lang = document.getElementById("langSelect").value;
+      const mode = document.getElementById("modeSelect").value;
+
+      localStorage.setItem("name", name);
+      localStorage.setItem("surname", surname);
+      localStorage.setItem("birth", birth);
+      localStorage.setItem("gender", gender);
+      localStorage.setItem("lang", lang);
+      localStorage.setItem("mode", mode);
+      alert("Ma'lumotlar saqlandi ✅");
+    }
+
+    function editProfile() {
+      document.getElementById("nameInput").disabled = false;
+      document.getElementById("surnameInput").disabled = false;
+      document.getElementById("birthInput").disabled = false;
+      document.getElementById("genderSelect").disabled = false;
+      document.getElementById("langSelect").disabled = false;
+      document.getElementById("modeSelect").disabled = false;
+      alert("O'zgartirish mumkin ✅");
+    }
+
+    window.onload = () => {
+      if(localStorage.getItem("profileImage")) {
+        document.getElementById("profileImageSmall").src = localStorage.getItem("profileImage");
+        document.getElementById("profileImagePreview").src = localStorage.getItem("profileImage");
+      }
+      document.getElementById("nameInput").value = localStorage.getItem("name") || "";
+      document.getElementById("surnameInput").value = localStorage.getItem("surname") || "";
+      document.getElementById("birthInput").value = localStorage.getItem("birth") || "";
+      document.getElementById("genderSelect").value = localStorage.getItem("gender") || "";
+      document.getElementById("langSelect").value = localStorage.getItem("lang") || "uz";
+      document.getElementById("modeSelect").value = localStorage.getItem("mode") || "light";
+    }
+    // Psixologik Test
+function nextQuestion() {
+  if (document.getElementById("answer1").checked || document.getElementById("answer2").checked) {
+    document.getElementById("questionSection").style.display = "none";
+    document.getElementById("questionSection2").style.display = "block";
+  } else {
+    alert("Iltimos, javobni tanlang!");
+  }
+}
+
+function showResult() {
+  document.getElementById("questionSection2").style.display = "none";
+  document.getElementById("questionSection3").style.display = "none";
+  document.getElementById("result").style.display = "block";
+  document.getElementById("result").innerHTML = "Test yakunlandi. Sizning natijangiz: Eng yaxshi ruhiy holat!";
+}
+
+// O'yin - Sevgi
+function heartClick() {
+  let points = localStorage.getItem("points") || 0;
+  points = parseInt(points) + 1;
+  localStorage.setItem("points", points);
+  document.getElementById("gameResult").innerHTML = `Sizning ballaringiz: ${points}`;
+}
+</script> </body> </html> ```
