--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
   <h1 class="glow">Ta'mirlash ishlari olib borilmoqda...</h1>
   <p>Iltimos, keyinroq qayta urinib ko‘ring.</p>
 </body>
-</html>
-*/
+</html> */
 
 
 
