--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-/* <!DOCTYPE html>
+/*
+<!DOCTYPE html>
 <html lang="uz">
 <head>
   <meta charset="UTF-8" />
@@ -62,7 +63,8 @@
   <h1 class="glow">Ta'mirlash ishlari olib borilmoqda...</h1>
   <p>Iltimos, keyinroq qayta urinib ko‘ring.</p>
 </body>
-</html> */
+</html> 
+*/
 
 
 
