--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <!-- Yangiliklar bo'limi -->
     <div class="news-section">
       <div class="news-title">Yangiliklar</div>
-      <div id="newsContent">Bu yerda yangiliklarni yozib borasiz...</div>
+      <div id="newsContent"> Hozirda hech qanday yangiliklar mavjud emas yangilik bolishi bilan habar beramiz </div>
     </div>
 
     <!-- O'yin bo'limi -->
